User profile image data can now be uploaded to Firestore along with their other data (occupation, height, etc).

--- a/new-pompeius/Podfile
+++ b/new-pompeius/Podfile
@@ -16,6 +16,7 @@ pod 'Firebase/Core'
 pod 'Firebase/Firestore'
 pod 'GoogleSignIn'
 pod 'Firebase/Database'
+pod 'Firebase/Storage'
 
   target 'new-pompeiusTests' do
     inherit! :search_paths
